# haskell-lv2

./: Amp.hs  LICENSE  LV2.hs  Makefile  Setup.hs  amp.c  amp.ttl  haskell-lv2.cabal  init.c  lv2_stub.c  manifest.ttl
amp.lv2/: Amp.hs  Makefile  amp.ttl
examples/amp-lv2/: Amp.hs  Setup.hs  amp-lv2.cabal  manifest.ttl
src/: LV2.hs  lv2_stub.c
src/Distribution/: LV2.hs
