name:                haskell-lv2
version:             0.0.0.1
synopsis:            Haskell bindings for LV2 plugin API
description:         Haskell bindings for LV2 plugin API
homepage:            https://github.com/mmartin/haskell-lv2
license:             BSD3
license-file:        LICENSE
author:              Mārtiņš Mačs
maintainer:          macs.martins@gmail.com
category:            Music
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     LV2
  c-sources: lv2_stub.c
  GHC-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010

  build-depends:       base     ==4.*
                     , template-haskell
