name:               haskell-lv2
version:            0.0.0.1
synopsis:           Haskell bindings for LV2 plugin API
description:        Haskell bindings for LV2 plugin API
homepage:           https://github.com/mmartin/haskell-lv2
license:            BSD3
license-file:       LICENSE
author:             Mārtiņš Mačs
maintainer:         macs.martins@gmail.com
category:           Music
build-type:         Custom
cabal-version:      >=1.10

library
    exposed-modules:    LV2, Distribution.LV2
    default-language:   Haskell2010
    hs-source-dirs:     src

    build-depends:      base        == 4.*
                      , Cabal       >= 1.10
                      , filepath    >= 1.3
                      , directory   >= 1.2
                      , template-haskell
