name:               amp-lv2
version:            0.0.0.1
synopsis:           Simple aplifier plugin for LV2
description:        Simple aplifier plugin for LV2
homepage:           https://github.com/mmartin/haskell-lv2
license:            BSD3
author:             Mārtiņš Mačs
maintainer:         macs.martins@gmail.com
category:           Music
build-type:         Custom
cabal-version:      >=1.10

library
    exposed-modules:    Amp
    default-language:   Haskell2010
    ghc-options:        -o amp.so

    build-depends:      base==4.*
                      , template-haskell
                      , haskell-lv2
